# ot-harjoitustyo

./: README.md
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: t1.md
miinaharava/: pyproject.toml  scores.db  tasks.py
miinaharava/dokumentaatio/: vaatimusmaarittely.md
miinaharava/src/: highscores.py  level.py  main.py
miinaharava/src/sprites/: easy.py  easy_light.py  end_screen.py  flag.py  found_mine.py  hard.py  hard_light.py  havio.py  hiddenMine.py  hidden_mine.py  hover_square.py  lose.py  medium.py  medium_light.py  number1.py  number2.py  number3.py  number4.py  number5.py  number6.py  number7.py  number8.py  revealed_square.py  square.py  voitto.py  win.py
miinaharava/src/tests/: miinaharava_test.py
miinaharava/src/ui/: ui.py
